[package]
name = "gmt-fem"
version = "1.2.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Finite Element Model"
repository = "https://github.com/rconan/fem"
documentation = "https://docs.rs/gmt-fem"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
default-run = "cargo-gmt-fem"

[workspace]
members = ["fem-macros"]

[workspace.dependencies]
arrow = "30.0"
parquet = "30.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
zip = "0.5.13"
bytes = "1.3.0"

[dependencies]
num-complex = "0.4.2"
serde-pickle = "0.6.2"
fem-macros = { path = "fem-macros", version = "0.3.0" }
nalgebra = { version = "0.31", features = ["rand"] }
log = "0.4.14"
rayon = "1.5.1"
bincode = "1.3.3"
geotrans = "0.1.0"
gmt_dos-actors = { version = "5.0.1", default-features = false }
dos-clients_io = { version = "1.0.0", package = "gmt_dos-clients_io", optional = true }
serde.workspace = true
thiserror.workspace = true
arrow.workspace = true
parquet.workspace = true
zip.workspace = true
bytes.workspace = true
matio-rs = "1.1.2"
tempfile = "3.3.0"
clap = { version = "4.1.1", features = ["derive"], optional = true }

[features]
full = ["dos-clients_io"]
default = ["full", "cfd2022"]
fsm = []
asm = []
mcm2lcl = []
cfd2022 = []

[dev-dependencies]
plotters = "0.3.0"
#datax = { path = "../datax" }
# rstar = "0.8.2"
rayon = "1.5.0"
# rustfft = "5.0.1"
csv = "1.1.5"
# spade = "1.8.2"
triangle-rs = "0.1.2"
complot = { version = "0.3.1", features = ["png"] }
anyhow = "1.0.51"
parquet.workspace = true
arrow.workspace = true

[[bin]]
name = "cargo-gmt-fem"
path = "src/bin/inspect.rs"
required-features = ["clap"]

[package.metadata.docs.rs]
no-default-features = true
