[package]
name = "gmt-fem"
version = "3.1.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Finite Element Model"
repository = "https://github.com/rconan/fem"
documentation = "https://docs.rs/gmt-fem"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
build = "build/build.rs"

[workspace]
members = []

[workspace.dependencies]
arrow = "30.0"
parquet = "30.0"
thiserror = "1.0.38"
zip = "0.5.13"
bytes = "1.3.0"

[dependencies]
num-complex = "0.4.2"
serde-pickle = "0.6.2"
nalgebra = { version = "0.32.1", features = ["rand"] }
log = "0.4.14"
rayon = "1.5.1"
bincode = "1.3.3"
geotrans = "0.1.0"
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror.workspace = true
arrow.workspace = true
parquet.workspace = true
zip.workspace = true
bytes.workspace = true
matio-rs = "1.3.1"
tempfile = "3.3.0"
clap = { version = "4.1.1", features = ["derive"], optional = true }
gmt_dos-clients = { version = "2.0.0", default-features = false, features = [
    "interface",
] }

[dev-dependencies]
plotters = "0.3.0"
rayon = "1.5.0"
csv = "1.1.5"
triangle-rs = "0.1.2"
complot = { version = "0.3.1", features = ["png"] }
anyhow = "1.0.51"
parquet.workspace = true
arrow.workspace = true

[build-dependencies]
anyhow = "1.0.51"
zip.workspace = true
arrow.workspace = true
parquet.workspace = true
bytes.workspace = true
thiserror = { version = "1.0.30" }

[package.metadata.docs.rs]
all-features = true
