[package]
name = "gmt-fem"
version = "5.2.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2024"
license = "MIT"
description = "Giant Magellan Telescope Finite Element Model"
repository = "https://github.com/rconan/fem"
documentation = "https://docs.rs/gmt-fem"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
zip.workspace = true
bytes.workspace = true
num-complex = "0.4.2"
serde-pickle = "0.6.2"
nalgebra = { workspace = true, features = ["rand"] }
log.workspace = true
rayon.workspace = true
bincode.workspace = true
geotrans = "0.1.0"
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
apache-arrow.workspace = true
parquet.workspace = true
matio-rs.workspace = true
tempfile = "3.3.0"
clap = { version = "4.1.1", features = ["derive"], optional = true }

[dev-dependencies]
plotters = "0.3.0"
csv = "1.1.5"
triangle-rs = "0.1.2"
complot = { version = "0.3.1", features = ["png"] }
anyhow.workspace = true

[build-dependencies]
anyhow.workspace = true
apache-arrow.workspace = true
parquet.workspace = true
thiserror.workspace = true
zip.workspace = true
bytes.workspace = true
gmt-fem-code-builder.workspace = true

[package.metadata.docs.rs]
all-features = true
