[package]
name = "fem-macros"
version = "0.1.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "Procedural macros to build the Giant Magellan Telescope FEM inputs/outputs"
repository = "https://github.com/rconan/fem"
documentation = "https://docs.rs/fem-macros"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[lib]
proc-macro = true

[dependencies]
arrow = { version = "6.5.0", optional = true }
hdf5 = { version = "^0.8", optional = true }
parquet = { version = "6.5.0", optional = true }
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = "1.0.85"
thiserror = { version = "1.0.30", optional = true }
zip = { version = "0.5.13", optional = true }

[features]
prqt = ["arrow", "parquet", "thiserror", "zip"]

[package.metadata.docs.rs]
features = ["prqt"]
