[package]
name = "fem-macros"
version = "0.2.5"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "Procedural macros to build the Giant Magellan Telescope FEM inputs/outputs"
repository = "https://github.com/rconan/fem"
documentation = "https://docs.rs/fem-macros"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[lib]
proc-macro = true

[dependencies]
arrow = { version = "10.0.0" }
parquet = { version = "10.0.0" }
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = "1.0.85"
thiserror = { version = "1.0.30" }
zip = { version = "0.5.13" }
