[package]
name = "fem-proc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" , branch= "master" }
proc-macro2 = "1.0.28"
quote = "1.0.9"
